--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <style>
     body {
-        background: black;
+        background: #121212;
         margin: 0;
     }
 
@@ -51,6 +51,7 @@
         font-size: medium;
         margin: 0 auto;
         width: max-content;
+        border-radius: 5px;
     }
 
     #title {
