--- a/homepage.html
+++ b/homepage.html
@@ -11,13 +11,13 @@
                 <img id="burger" src="https://peterwhitlock.info/menu_icon.png" alt="menu icon" />
             </button>
             <div class="ddmenu">
-                <a class="link" href="https://peterwhitlock.info/homepage.html/#about">
+                <a class="link" href="#about">
                     About Me
                 </a>
-                <a class="link" href="https://peterwhitlock.info/homepage.html/#projects">
+                <a class="link" href="#projects">
                     My Projects
                 </a>
-                <a class="link" href="https://peterwhitlock.info/homepage.html/#contacts">
+                <a class="link" href="#contacts">
                     Contact Me
                 </a>
             </div>
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div id="footer">
-        <a class="link" href="https://peterwhitlock.info/homepage.html/#header">
+        <a class="link" href="#header">
             <img id="arrow" src="https://peterwhitlock.info/up_arrow.png" alt="return to top" />
         </a>
     </div>
