--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
     </div>
     <div class="pagelayout">
         <div id="title">
-            <h1>
-                GAME
-            </h1>
-            <h1>
-                DESIGNER
-            </h1>
-            <p>
-                Portfolio by Peter Whitlock
-            </p>
+            <div></div>
+            <div>
+                <h1>
+                    GAME
+                </h1>
+                <h1>
+                    DESIGNER
+                </h1>
+                <p>
+                    Portfolio by Peter Whitlock
+                </p>
+            </div>
+            <div></div>
         </div>
         <div class="segment" id="about">
             <h2>
@@ -68,7 +72,7 @@
                 MY PROJECTS
             </h2>
             <p>
-                Water World, Dissertation, Graphic Design (UI?), Web Design, Modelling and other skills. 
+                Water World, Dissertation, Graphic Design (UI?), Web Design, Modelling and other skills.
             </p>
         </div>
         <div class="segment" id="contacts">
@@ -76,14 +80,14 @@
                 CONTACT ME
             </h2>
             <p>
-                Please feel free to contact me at any of the following places. 
+                Please feel free to contact me at any of the following places.
                 pwhitlock0279@gmail.com, 07375143381, linkedin.com/in/peterwhitlock
             </p>
         </div>
     </div>
     <div id="footer">
         <a class="link" href="#header">
-            <img id="arrow" src="https://peterwhitlock.info/up_arrow.png" alt="return to top"/>
+            <img id="arrow" src="https://peterwhitlock.info/up_arrow.png" alt="return to top" />
         </a>
     </div>
 </body>
@@ -107,14 +111,13 @@
 
     h1 {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 600%;
+        font-size: 8vw;
         margin: 0;
-        padding-right: 15vw;
     }
 
     h2 {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 400%;
+        font-size: 4vw;
         margin: 0;
     }
 
@@ -172,11 +175,11 @@
 
     #title {
         display: grid;
-        place-content: center;
         min-height: 100vh;
-        width: 75%;
+        width: 70%;
         margin: 0 auto;
-        padding: 0 2rem;
+        padding-left: 2rem;
+        grid-template-rows: 35% 30% 30%;
     }
 
     #about {
