--- a/homepage.html
+++ b/homepage.html
@@ -25,15 +25,19 @@
     </div>
     <div class="pagelayout">
         <div id="title">
-            <h1>
-                GAME
-            </h1>
-            <h1>
-                DESIGNER
-            </h1>
-            <p>
-                Portfolio by Peter Whitlock
-            </p>
+            <div></div>
+            <div>
+                <h1>
+                    GAME
+                </h1>
+                <h1>
+                    DESIGNER
+                </h1>
+                <p>
+                    Portfolio by Peter Whitlock
+                </p>
+            </div>
+            <div></div>
         </div>
         <div class="segment" id="about">
             <h2>
@@ -88,14 +92,13 @@
 
     h1 {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 600%;
+        font-size: 8vw;
         margin: 0;
-        padding-right: 15vw;
     }
 
     h2 {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 400%;
+        font-size: 4vw;
         margin: 0;
     }
 
@@ -155,11 +158,11 @@
 
     #title {
         display: grid;
-        place-content: center;
         min-height: 100vh;
-        width: 75%;
+        width: 70%;
         margin: 0 auto;
-        padding: 0 2rem;
+        padding-left: 2rem;
+        grid-template-rows: 35% 30% 30%;
     }
 
     #about {
