--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Home Page</title>
+    <title>Peter's Portfolio</title>
 </head>
 <body>
     <div id="splashscreen">
@@ -11,14 +11,8 @@
                 Thank you for your interest!
             </h2>
             <p>
-                I am working hard to finish my portfolio,
-                in the mean time please feel free to visit
-                my LinkedIn page at the link below.
+                I am working hard to finish my portfolio, but if you would like to view my progress anyway (spelling mistakes and all) please continue below.
             </p>
-            <p></p>
-            <a class="link" id="linkedin" href="https://www.linkedin.com/in/peterwhitlock">
-                Go to LinkedIn
-            </a>
             <a class="link" id="continue" href="https://peterwhitlock.info/homepage.html">
                 Continue anyway
             </a>
@@ -33,8 +27,17 @@
                 <a class="link" href="#about">
                     About Me
                 </a>
-                <a class="link" href="#projects">
-                    My Projects
+                <a class="link" href="#unity">
+                    Unity Projects
+                </a>
+                <a class="link" href="#unreal">
+                    Unreal Projects
+                </a>
+                <a class="link" href="#design">
+                    Art & Design
+                </a>
+                <a class="link" href="#web">
+                    Web Design & More
                 </a>
                 <a class="link" href="#contacts">
                     Contact Me
@@ -50,7 +53,7 @@
                     GAME
                 </h1>
                 <h1>
-                    DESIGNER
+                    DEVELOPER
                 </h1>
                 <p>
                     Portfolio by Peter Whitlock
@@ -58,21 +61,133 @@
             </div>
             <div></div>
         </div>
-        <div class="segment" id="about">
+        <div class="segment blue" id="about">
             <h2>
                 ABOUT ME
             </h2>
-            <p>
-                I am a friendly and enthusiastic games design graduate from Bournemouth University looking for jobs
-                in games design, graphics and UI design, web development or other creative software industries.
-            </p>
+            <div class="pialdiv">
+                <img class="projectimg" src="https://peterwhitlock.info/portrait.jpg" />
+                <p id="aboutpara">
+                    I am a friendly and enthusiastic games design graduate from Bournemouth University looking for jobs
+                    in games design, graphics and UI design, web development or other creative software industries.
+                </p>
+            </div>
         </div>
-        <div class="segment" id="projects">
+        <div class="segment grey" id="unity">
             <h2>
-                MY PROJECTS
+                UNITY EXPERIENCE
             </h2>
             <p>
-                Water World, Dissertation, Graphic Design (UI?), Web Design, Modelling and other skills.
+                I have been developing my skills in unity since my first year at Uni and continue to use them in my own projects.
+                The 4 examples are from all 3 years at Uni plus something I've been working on in my own time recently.
+            </p>
+            <p>
+                In first year we were tasked with coding the physics for a marble run in unity.
+                The project needed to include a number of unique parts, with one breaking the laws of physics.
+                Using C# and simple block elements, I created a complex system and added an "anthropomorphiser" which animated the marbles
+                to walk back to the start as my physics breaking component. I was happy to recieve a 1st grade for this work.
+            </p>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/marblerun.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/marblerun_close.jpg" />
+            </div>
+            <div class="spacer"></div>
+            <p>
+                For Interface Design in second year I needed to create a 3D gem collection game and add an user interface to it.
+            </p>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/editor_in_game.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/navmesh.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/editor_start_menu.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/popup_menu.jpg" />
+            </div>
+            <p>
+                I used a combination of free 3D assets to create a dessert scene and matched the style of the UI with a 19th century American western theme.
+                As part of the assignment we were required to create a point and click movement system for the player
+                so I implemented a navmesh to achieve this.
+            </p>
+            <div class="spacer"></div>
+            <p>
+                For my dissertation, I chose to use unity as I wanted to create a mobile audio game.
+                Instead of doing the more practical variation, I chose to do a standard project which weighted my research and dissertation higher.
+            </p>
+            <div class="piardiv">
+                <img class="projectimg" src="https://peterwhitlock.info/dis_editor.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/dis_menu.jpg" />
+            </div>
+            <div class="spacer"></div>
+            <p>
+                "Queenie" is my current project that I'm doing for fun in my space time.
+                It's a bee hive simulator/defense game where you can watch an army of bee's evolve.
+            </p>
+            <div class="pialdiv">
+                <img class="projectimg" src="https://peterwhitlock.info/queenie.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/queenie_editor.jpg" />
+            </div>
+        </div>
+        <div class="segment" id="unreal">
+            <h2>
+                UNREAL EXPERIENCE
+            </h2>
+            <p>
+                Although I feel most confident in unity, I have done a range of projects in unreal as well.
+                In first year for a Level Design unit I built an eery subway level.
+            </p>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/subway.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/barriers.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/platform.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/barriers2.jpg" />
+            </div>
+            <div class="spacer"></div>
+            <p>
+                In second year, as a group project we developed a FPS game set on a spaceship with temeramental gravity.
+                I focused on a lot of the user interface for this game like the HUD and menus.
+            </p>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/start_unreal.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/unreal_options.jpg" />
+            </div>
+        </div>
+        <div class="segment blue" id="design">
+            <h2>
+                ART & DESIGN
+            </h2>
+            <p>
+                As part of my games design course we were taught 3D modelling with Maya and Substance.
+                In my first and second years I modelled an electic car charging station and Stitch from lilo & stitch.
+            </p>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/stitch.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/charger.jpg" />
+            </div>
+            <div class="spacer"></div>
+            <p>
+                In my space time I enjoy designing graphics for myself and my friends.
+                Something I did more recently was create a logo and banner art for a 3D printing etsy page called Print Play Perform.
+            </p>
+            <img class="projectimg" src="https://peterwhitlock.info/ppp.jpg" />
+            <img class="projectimg" src="https://peterwhitlock.info/ppp_street.jpg" />
+            <div class="spacer"></div>
+            <div class="pidiv">
+                <img class="projectimg" src="https://peterwhitlock.info/bluesaloon.jpg" />
+                <img class="projectimg" src="https://peterwhitlock.info/badlyexplained.jpg" />
+            </div>
+        </div>
+        <div class="segment grey" id="web">
+            <h2>
+                WEB DEVELOPMENT & MORE
+            </h2>
+            <p>
+                Since first year where we had to code a website, I've enjoyed practising my web design skills in my own time.
+                I created this website for my portfolio from scratch using HTML & CSS and have made a couple similar websites for projects with friends.
+            </p>
+            <p>
+                As part of my course I also got a chance to learn other useful skills in the games industry such as telemetry data analysis using python,
+                or using twine to make narritive focused text based games.
+            </p>
+            <p>
+                HTML & CSS, Analytics (Python), Narrative? - This Site (reference Uni unit), Lol Analysis, Hansel & gretle?
             </p>
         </div>
         <div class="segment" id="contacts">
@@ -118,7 +233,7 @@
     h2 {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 4vw;
-        margin: 0;
+        margin: 0 0 2rem 0;
     }
 
 
@@ -128,9 +243,28 @@
         grid-template-rows: auto;
         margin: 0 auto;
     }
-
     .segment {
-        padding: 30vh 10vw;
+        padding: 20vh 10vw;
+    }
+    .spacer {
+        margin: 3rem;
+    }
+
+    .pidiv {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+    .pialdiv {
+        display: grid;
+        grid-template-columns: 22.04% 77.96%;
+    }
+    .piardiv {
+        display: grid;
+        grid-template-columns: 76.8% 23.2%;
+    }
+    .projectimg {
+        max-width: 100%;
+        height: auto;
     }
 
     .link {
@@ -165,6 +299,14 @@
         display: none;
     }
 
+    .blue {
+        background: #30bced;
+    }
+    .grey {
+        background: #303036;
+        color: white;
+    }
+
 
     /*-------------- IDs ---------------*/
     #header {
@@ -182,15 +324,8 @@
         grid-template-rows: 35% 30% 30%;
     }
 
-    #about {
-        background: #30bced;
-    }
-    #projects {
-        background: #303036;
-        color: white;
-    }
-    #contacts {
-        background: white;
+    #aboutpara {
+        padding-left: 2rem;
     }
 
     #burger {
@@ -216,6 +351,7 @@
         margin: 0;
         width: 100vw;
     }
+
     #sstext {
         display: grid;
         place-content: center;
@@ -224,18 +360,7 @@
         margin: 0 auto;
         color: white;
     }
-    #linkedin {
-        color: white;
-        background: linear-gradient(0.4turn, #0096ff, #210ba7);
-        padding: 0.2rem 0.6rem;
-        font-weight: bold;
-        width: max-content;
-        border-radius: 0.5rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-    #linkedin:hover {
-        padding: 0.3rem 0.8rem;
-    }
+
     #continue {
         color: white;
         background: #202020;
