--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="header">
                 <div class="dropdown">
                     <button class="link ddlink">
-                        <img id="burger" src="https://peterwhitlock.info/menu_icon.jpg" alt="menu icon" />
+                        <img id="burger" src="https://peterwhitlock.info/menu_icon.png" alt="menu icon" />
                     </button>
                     <div class="ddmenu">
                         <a class="link" href="#about">
@@ -265,7 +265,7 @@
             </div>
             <div id="footer">
                 <a class="link" href="#header">
-                    <img id="arrow" src="https://peterwhitlock.info/up_arrow.jpg" alt="return to top" />
+                    <img id="arrow" src="https://peterwhitlock.info/up_arrow.png" alt="return to top" />
                 </a>
             </div>
         </div>
