--- a/homepage.html
+++ b/homepage.html
@@ -66,15 +66,15 @@
                         I enjoy <span>learning</span> new skills, being <span>creative</span>, and providing an <span>analytical</span> approach to complex problems.
                         One of the many reasons I've fallen in love with games design, despite only more recently discovering
                         an interest in playing video games, is because it's such a diverse industry where
-                        I can satisfy both my mathematical and artistic interests.
+                        I can satisfy both my mathematical and artistic sides.
                     </p>
                     <p>
                         In my spare time I enjoy hanging out with friends, listening to music and podcasts, as well as running and swimming.
-                        I've always enjoyed board games but, as mentioned, I've also been enjoy more video games which has help improve
+                        I've always enjoyed board games but, as mentioned, I've also been enjoying more video games which has helped improve
                         my understanding of the industry. I also have a <span>big interest in technology, history, and design</span>.
                     </p>
                     <p>
-                        Although games design, and especially UI design, is my top choice for the next step in my carrier,
+                        Although games design, and especially UI design, is my top choice for the next step in my career,
                         my skills and interests extend to all sorts of applications in <span>software development, web development,
                         graphic design, 3D modelling</span>, and more.
                         In this portfolio I hope to demonstrate some of the work I've done both as part of my university course
@@ -105,7 +105,7 @@
             <p>
                 For our interface design unit in second year we needed to create a stylistic <span>user interface for a 3D gem collection game</span>
                 we would need to code. We could use free assets for the project but I mainly made my UI from scratch
-                matching it to the dessert asset pack I used with an old western style theme.
+                matching it to the desert asset pack I used with an old western style theme.
                 I really enjoyed the project and the creativity it provided but looking back I would have liked to have spent more time
                 perfecting the user experience of my design and balancing that better with the aesthetic of it.
             </p>
@@ -124,14 +124,14 @@
                 the game could lean on the face to face contact traditional games provide.
             </p>
             <p>
-                It was a great learning experience and really pushed my skills to attempt to invent a new style of game.
+                It was a great learning experience and really pushed my skills to attempt to develop a new style of game.
                 However, looking back I was a little <span>too ambitious</span> and struggled to complete the game in the time frame hurting my final grade.
                 Despite that, I don't regret my choice because it taught me a lot and I would rather push too far than not enough.
             </p>
             <div class="spacer"></div>
             <p>
                 Currently, I am making a game for fun in my spare time with unity called Queenie.
-                A bee hive simulator/tower defence game where you can guide and watch an army of bee's evolve.
+                A bee hive simulator/tower defence game where you can guide and watch an army of bees evolve.
             </p>
             <div class="pialdiv">
                 <img class="projectimg" src="https://peterwhitlock.info/queenie.jpg" />
@@ -197,7 +197,8 @@
                 <img class="projectimg" src="https://peterwhitlock.info/badlyexplained.jpg" />
             </div>
             <p>
-                My 2D design skills are constantly evolving as I continue to teach myself in my space time.
+                These photos are other examples of designs I have worked on with friends. Blue Saloon being a bus company, and Badly Explained an idea for a podcast.
+                My 2D design skills are constantly evolving as I continue to teach myself in my spare time.
                 I'd love to be able to incorporate vector art and design in my job.
             </p>
         </div>
